--- a/cip/cip_frontend/client/app/crowd/crowd.user.html
+++ b/cip/cip_frontend/client/app/crowd/crowd.user.html
@@ -1,32 +1,28 @@
 <div class="wrapper wrapper-content animated fadeInRight" data-ng-init="init_user()">
   <fieldset>
       <!-- Show -->
-      <legend>条件列表</legend>
-      <table class="table table-hover"
-             ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
+      <legend>{{'Crowd_create.CrowdCondition' | translate}}</legend>
+      <table class="table table-hover" ng-if="crowdDetail.selector.ontology.length>0 || crowdDetail.selector.behavior.length>0 || crowdDetail.selector.tag.length>0">
           <thead>
           <tr>
-              <th>序号</th>
-              <th>圈人条件</th>
-              <th>覆盖人数</th>
+              <th>{{'Crowd_create.Index' | translate}}</th>
+              <th>{{'Crowd_create.CrowdCondition' | translate}}</th>
+              <th>{{'Crowd_create.CrowdAmount' | translate}}</th>
           </tr>
           </thead>
           <tbody>
           <tr data-ng-repeat="condition in crowdDetail.selector.tag">
               <td>{{$index+1}}</td>
-              <td>{{condition_type[0].name}}:&nbsp;&nbsp;<b>{{condition.name}} {{condition.operator}}
-                  {{condition.factor}}</b></td>
+              <td>{{condition_type[0].name}}:&nbsp;&nbsp;<b>{{condition.name}} {{condition.operator}} {{condition.factor}}</b></td>
               <td>{{condition.count}}</td>
           </tr>
           <tr data-ng-repeat="condition in crowdDetail.selector.ontology">
               <td>{{$index+1+crowdDetail.selector.tag.length}}</td>
               <td ng-if="condition.operator!='dislike' && condition.operator!='like'">
-                  {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣的权重
-                  <b>{{condition.operator}} {{condition.weight}}</b>
+                  {{condition_type[1].name}}:&nbsp;&nbsp;<b>{{condition.name}}</b>{{'Crowd_create.Of' | translate}}<b>{{condition.factor}}</b>{{'Crowd_create.InterestWeightIs' | translate}} <b>{{condition.operator}} {{condition.weight}}</b>
               </td>
               <td ng-if="condition.operator=='dislike' || condition.operator=='like'">
-                  {{condition_type[1].name}}:&nbsp;&nbsp;对<b>{{condition.name}}</b>之<b>{{condition.factor}}</b>的兴趣为
-                  <b>{{condition.operator}}</b>
+                  {{condition_type[1].name}}:&nbsp;&nbsp;<b>{{condition.name}}</b>{{'Crowd_create.Of' | translate}}<b>{{condition.factor}}</b>{{'Crowd_create.InterestIs' | translate}} <b>{{condition.operator}}</b>
               </td>
               <td>{{condition.count}}</td>
           </tr>
@@ -34,24 +30,51 @@
               <td>{{$index+1+crowdDetail.selector.tag.length+crowdDetail.selector.ontology.length}}</td>
               <td>
                   {{condition_type[2].name}}:&nbsp;&nbsp;<b>{{condition.action}}</b>&nbsp;<b>{{condition.objectCategory}}</b>
-                  <nobr ng-if="condition.objectType=='Category'">&nbsp;&nbsp;位于<b>{{condition.ontologyType}}/{{condition.objectId}}</b>目录下
+                  <nobr ng-if="condition.objectType=='Category'">&nbsp;&nbsp;
+                  {{'Crowd_create.In' | translate}}
+                  <b>{{condition.ontologyType}}/{{condition.objectId}}</b>
+                  {{'Crowd_create.Folder' | translate}}
                   </nobr>
-                  <nobr ng-if="condition.objectType=='Contains'">&nbsp;&nbsp;包含字段<b>{{condition.ontologyType}}/{{condition.objectId}}</b>
+                  <nobr ng-if="condition.objectType=='Contains'">&nbsp;&nbsp;
+                  {{'Crowd_create.ContainsCharacters' | translate}}
+                  <b>{{condition.ontologyType}}/{{condition.objectId}}</b></nobr>
+                  <nobr ng-if="condition.objectType=='Item'">&nbsp;&nbsp;
+                  {{'Crowd_create.Item' | translate}}
+                  <b>{{condition.objectId}}</b></nobr>
+                  &nbsp;&nbsp;
+                  {{'Crowd_create.Frequency' | translate}}
+                  <b>{{condition.operator}} {{condition.value}}</b>
+                  <nobr ng-if="condition.timeType=='absolute'">&nbsp;&nbsp;
+                  {{'Crowd_create.DateBetween' | translate}}
+                  <b>{{condition.startTime | date:'shortDate'}}</b>
+                  {{'Crowd_create.To' | translate}}
+                  <b>{{condition.endTime | date:'shortDate'}}</b>
+                  {{Crowd_create.zh_Range | translate}}
                   </nobr>
-                  <nobr ng-if="condition.objectType=='Item'">&nbsp;&nbsp;物品ID=<b>{{condition.objectId}}</b></nobr>
-                  &nbsp;&nbsp;发生次数 <b>{{condition.operator}} {{condition.value}}</b>次
-                  <nobr ng-if="condition.timeType=='absolute'">&nbsp;&nbsp;在日期<b>{{condition.startTime |
-                      date:'shortDate'}}</b>到<b>{{condition.endTime | date:'shortDate'}}</b>内
+                  <nobr ng-if="condition.timeType=='day'">&nbsp;&nbsp;
+                  {{'Crowd_create.InThePassed' | translate}}
+                  <b>{{condition.startTime/86400000}}</b>
+                  {{'Crowd_create.Days' | translate}}
+                  {{Crowd_create.zh_Range | translate}}
                   </nobr>
-                  <nobr ng-if="condition.timeType=='day'">&nbsp;&nbsp;在过去<b>{{condition.startTime/86400000}}</b>天内</nobr>
-                  <nobr ng-if="condition.timeType=='hour'">&nbsp;&nbsp;在过去<b>{{condition.startTime/3600000}}</b>小时内</nobr>
+                  <nobr ng-if="condition.timeType=='hour'">&nbsp;&nbsp;
+                  {{'Crowd_create.InThePassed' | translate}}
+                  <b>{{condition.startTime/3600000}}</b>
+                  {{'Crowd_create.Hours' | translate}}
+                  {{Crowd_create.zh_Range | translate}}
+                  </nobr>
               </td>
               <td>{{condition.count}}</td>
           </tr>
           </tbody>
-      </table>
-
-      <div class="col-md-offset-8 col-md-3"><h5>满足上面所有条件 共覆盖{{crowdDetail.count}}人</h5></div>
+        </table>
+        <div class="col-md-offset-8 col-md-3">
+        <h4>
+            {{'Crowd_create.QueryMatchAmount' | translate}}
+            <span ng-if="crowdDetail.count >= 0">{{crowdDetail.count}}</span>
+            {{'Crowd_create.zh_People' | translate}}
+        </h4>
+        </div>
   </fieldset>
 
   <fieldset>
