--- a/cip/cip_frontend/client/app/crowd/crowd.view.html
+++ b/cip/cip_frontend/client/app/crowd/crowd.view.html
@@ -39,7 +39,7 @@
         </tr>
         </tbody>
     </table>
-    <div class="text-center " ng-show="crowd.list.length>0">
+    <div class="text-center " ng-show="page.total_items>10">
         <uib-pagination 
         boundary-links="true" 
         total-items="page.total_items" 
