--- a/cip/cip_frontend/client/app/crowd/crowd.user.html
+++ b/cip/cip_frontend/client/app/crowd/crowd.user.html
@@ -78,20 +78,20 @@
   </fieldset>
 
   <fieldset>
-      <legend>用户列表明细</legend>
+      <legend>{{'Crowd_create.UserDetail' | translate}}</legend>
       <div class="text-center row" ng-if="!userList && crowdDetail.type == 'static'">
-          <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>数据正在获取中...
+          <span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>{{'Crowd_create.UserDataLoading' | translate}}
       </div>
       <div class="text-center row" ng-if="crowdDetail.type == 'dynamic'">
-          动态人群暂时不支持显示用户列表
+          {{'Crowd_create.DynamicCrowdUserList' | translate}}
       </div>
       <div class="col-md-offset-3 col-md-6">
-          <table class="table table-hover table-bordered" ng-if="userList.length>0 && crowdDetail.type == 'static'">
+          <table class="table table-hover table-bordered" ng-if="userList.length>=0 && crowdDetail.type == 'static'">
               <thead>
               <tr>
-                  <th>序号</th>
+                  <th>{{'Crowd_create.Index' | translate}}</th>
                   <th>UID</th>
-                  <th>操作</th>
+                  <th>{{'Crowd_create.Action' | translate}}</th>
               </tr>
               </thead>
               <tbody>
@@ -100,7 +100,8 @@
                   <td>{{user}}</td>
                   <td>
                   <span>
-                      <button class="btn btn-info btn-xs">探索此用户
+                      <button class="btn btn-info btn-xs" data-ng-click="comingSoon()">
+                      {{'Crowd_create.ExploreUser' | translate}}
                       </button>
                   </span>
                   </td>
@@ -110,8 +111,8 @@
       </div>
   </fieldset>
 
-  <div class="col-md-offset-5 col-md-2">
+  <div class="col-md-offset-3 col-md-6">
       <a target="_self" id="downloadUserlist" href="/api/download?file={{crowdDetail.file}}" download="userlist.xml"
-         class="btn btn-info btn-block" ng-if="userList.length>0 && crowdDetail.type == 'static'">下载UID集合</a>
+         class="btn btn-info btn-block" ng-if="userList.length>0 && crowdDetail.type == 'static'">{{'Crowd_create.DownloadUserList' | translate}}</a>
   </div>
 </div>
