--- a/cip/cip_frontend/client/index.html
+++ b/cip/cip_frontend/client/index.html
@@ -84,27 +84,24 @@
       <script src="template/scripts/translations.js"></script>
       <script src="template/scripts/inspinia.js"></script>
       <script src="template/scripts/directives.js"></script>
-      <script src="template/scripts/controllers.js"></script>
+      <script src="template/scripts/controllers.js"></script>  
 
-
-      <script src="app/crowd/crowd.service.js"></script>
-      <script src="app/crowd/crowd.controller.js"></script>      
-
-      
       <!-- injector:js -->
-      <script src="components/auth/auth.module.js"></script>
       <script src="app/admin/admin.module.js"></script>
+      <script src="components/auth/auth.module.js"></script>
       <script src="components/util/util.module.js"></script>
-      <script src="app/account/signup/signup.controller.js"></script>
+      <script src="app/main/main.js"></script>
       <script src="app/admin/admin.controller.js"></script>
       <script src="app/account/account.js"></script>
       <script src="app/admin/admin.router.js"></script>
       <script src="app/app.constant.js"></script>
       <script src="app/crowd/crowd.controller.js"></script>
       <script src="app/crowd/crowd.service.js"></script>
+      <script src="app/group/group.controller.js"></script>
+      <script src="app/group/group.service.js"></script>
       <script src="app/main/main.controller.js"></script>
-      <script src="app/main/main.js"></script>
       <script src="app/account/login/login.controller.js"></script>
+      <script src="app/account/settings/settings.controller.js"></script>
       <script src="components/auth/auth.service.js"></script>
       <script src="components/auth/interceptor.service.js"></script>
       <script src="components/auth/router.decorator.js"></script>
@@ -114,7 +111,7 @@
       <script src="components/mongoose-error/mongoose-error.directive.js"></script>
       <script src="components/navbar/navbar.controller.js"></script>
       <script src="components/navbar/navbar.directive.js"></script>
-      <script src="app/account/settings/settings.controller.js"></script>
+      <script src="app/account/signup/signup.controller.js"></script>
       <script src="components/util/util.service.js"></script>
       <!-- endinjector -->
     <!-- endbuild -->
