--- a/cip/cip_frontend/client/app/crowd/crowd.user.html
+++ b/cip/cip_frontend/client/app/crowd/crowd.user.html
@@ -112,7 +112,7 @@
   </fieldset>
 
   <div class="col-md-offset-3 col-md-6">
-      <a target="_self" id="downloadUserlist" href="/api/download?file={{crowdDetail.file}}" download="userlist.xml"
+      <a target="_self" id="downloadUserlist" href="/api/miscs/download?file={{crowdDetail.file}}" download="userlist.xml"
          class="btn btn-info btn-block" ng-if="userList.length>0 && crowdDetail.type == 'static'">{{'Crowd_create.DownloadUserList' | translate}}</a>
   </div>
 </div>
