--- a/cip/cip_frontend/client/app/group/group.view.html
+++ b/cip/cip_frontend/client/app/group/group.view.html
@@ -1,48 +1,57 @@
-<div class="wrapper wrapper-content animated fadeInRight" data-ng-init="">
-    <h4 class="text-center" ng-if="!crowds || crowds.length<=0">您还没有创建人群,请先创建人群</h4>
-    <h4 class="text-center" ng-if="crowds.length>0 && (!grouplist || grouplist.length<=0)">您还没有创建人群组合,快来创建一个吧</h4>
+<div class="wrapper wrapper-content animated fadeInRight" data-ng-init="init_view()">
+    <h4 class="text-center" ng-if="!crowd || crowd.length<=0">{{'Crowd_view.NoCrowdExist' | translate}}</h4>
+    <h4 class="text-center" ng-if="crowd.length>0 && (!group.list || group.list.length<=0)">{{'Group_view.NoGroupExist' | translate}}</h4>
 
-    <table class="table table-hover" ng-if="grouplist.length>0">
-        <h4 ng-if="grouplist.length>0">人群组合列表</h4>
+    <table class="table table-hover" ng-if="group.list.length>0">
+        <h4 ng-if="group.list.length>0">{{'Group_view.GroupList' | translate}}</h4>
         <thead>
         <tr>
-            <th>序号</th>
-            <th>人群组合名称</th>
-            <th>类型</th>
-            <th>覆盖人数</th>
-            <th>创建时间</th>
-            <th>状态</th>
-            <th>操作</th>
+            <th>{{'Group_view.GroupIndex' | translate}}</th>
+            <th>{{'Group_view.GroupName' | translate}}</th>
+            <th>{{'Group_view.GroupType' | translate}}</th>
+            <th>{{'Group_view.GroupCoverAomunt' | translate}}</th>
+            <th>{{'Group_view.GroupCreateDate' | translate}}</th>
+            <th>{{'Group_view.GroupStatus' | translate}}</th>
+            <th>{{'Group_view.GroupAction' | translate}}</th>
         </tr>
         </thead>
         <tbody>
-        <tr ng-repeat="crowd in grouplist">
+        <tr ng-repeat="crowd in group.list">
             <td>{{$index+1}}</td>
             <td>{{crowd.crowdName}}</td>
             <td>{{crowd.type}}</td>
             <td>{{crowd.count}}</td>
             <td>{{crowd.created | date:'yyyy-MM-dd'}}</td>
-            <td ng-if="crowd.tagAdded == 1" class="text-success">创建完成</td>
-            <td ng-if="crowd.tagAdded == 0" class="text-warning">创建中</td>
-            <td ng-if="crowd.tagAdded == -1" class="text-danger">创建失败</td>
+            <td ng-if="crowd.tagAdded == 1" class="text-success">{{'Group_view.CreateComplete' | translate}}</td>
+            <td ng-if="crowd.tagAdded == 0" class="text-warning">{{'Group_view.CreateInProcessing' | translate}}</td>
+            <td ng-if="crowd.tagAdded == -1" class="text-danger">{{'Group_view.CreateFailed' | translate}}</td>
             <td>
                 <span>
-                    <a class="btn btn-info btn-xs" data-ng-href="/crowd/group/{{crowd.crowdName}}/userlist">详情</a>
-                    <button class="btn btn-danger btn-xs" data-ng-click="removeGroup(crowd);">删除</button>
+                    <a class="btn btn-info btn-xs" data-ng-href="crowd/{{crowd._id}}/group_user">{{'Group_view.Detail' | translate}}</a>
+                    <button class="btn btn-danger btn-xs" data-ng-click="remove(crowd._id);">{{'Group_view.Delete' | translate}}</button>
                 </span>
             </td>
         </tr>
         </tbody>
     </table>
     <div class="text-center" ng-show="grouplist.length>0">
-        <uib-pagination boundary-links="true" total-items="totalGroupItems" ng-model="currentGroupPage" class="pagination-sm" ng-change="pageGroupChanged()"
-                        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;" items-per-page="page_size">
-
+        <uib-pagination 
+        boundary-links="true" 
+        total-items="page.total_items" 
+        ng-model="page.current_page" 
+        class="pagination-sm"
+        ng-change="groupPageChanged()"
+        previous-text="&lsaquo;" 
+        next-text="&rsaquo;" 
+        first-text="&laquo;" 
+        last-text="&raquo;"
+        max-size="page.max_size"
+        items-per-page="page.page_size">
         </uib-pagination>
     </div>
 
     <div class="col-md-offset-5 col-md-2">
-        <button data-ng-click="goToCreateGroup()" ng-if="crowds.length>0" class="btn btn-info btn-block">创建人群组合</button>
+        <button data-ng-click="goToCreateGroup()" ng-if="crowd.length>0" class="btn btn-info btn-block">{{'Group_view.CreateGroup' | translate}}</button>
     </div>
 
 
