[CIP-61] Working on group_view view.

--- a/cip/cip_frontend/client/app/group/group.user.html
+++ b/cip/cip_frontend/client/app/group/group.user.html
@@ -1,4 +1,4 @@
-<div class="wrapper wrapper-content animated fadeInRight" data-ng-init="">
+<div class="wrapper wrapper-content animated fadeInRight" data-ng-init="init_user()">
     <fieldset>
         <!-- Show -->
         <div class="col-md-12 row">
